--- a/html/inicio.html
+++ b/html/inicio.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-
-
+    <meta charset="UTF-8"> 
+    <link rel="stylesheet" type="text/css" href="../css/pelu.css">
+    <title>Peluquería Capelos Belleza</title>
 </head>
 
 <body>
     <div id="encabezado">
+        <h1>Capelos Belleza</h1>
         <div id="menu">
             <img src="" alt="logo">
             <nav></nav>
