--- a/html/inicio.html
+++ b/html/inicio.html
@@ -23,7 +23,17 @@
     <div>
         <p>Cancela tu cita con: 3 horas de antelación</p>
     </div>
-    <div></div>
+    <div>
+
+        <form id="formulario_trabajador_new" method="POST" action="../php/App.php?method=save_trabajador">
+            <label>Nombre: </label><input type="text" value="" name="nombre"><br>
+            <label>Apellidos: </label><input type="text" value="" name="apellidos"><br>
+            <label>Teléfono: </label><input type="text" value="" name="telefono"><br>
+
+            <input type="submit" value="enviar">
+        </form>
+
+    </div>
 
 
 
