--- a/html/inicio.html
+++ b/html/inicio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"> 
-    <link rel="stylesheet" type="text/css" href="../css/pelu.css">
+    <link rel="stylesheet" type="text/css" href="../css/capelloStyle.css">
     <title>Peluquería Capelos Belleza</title>
 </head>
 
