--- a/html/inicio.html
+++ b/html/inicio.html
@@ -11,7 +11,7 @@
     <div id="encabezado">
         <h1>Capelos Belleza</h1>
         <div id="menu">
-            <img src="" alt="logo">
+            <img src="../img/BELLEZAcapello-01.jpg" alt="logo">
             <nav></nav>
         </div>
         <div id="info">
