--- a/html/inicio.html
+++ b/html/inicio.html
@@ -27,7 +27,7 @@
     </div>
     <div>
 
-        <form id="formulario_trabajador_new" method="POST" action="../php/App.php?method=save_trabajador">
+        <form id="formulario_trabajador_new" method="POST" action=".php?method=save_trabajador">
             <label>Nombre: </label><input type="text" value="" name="nombre"><br>
             <label>Apellidos: </label><input type="text" value="" name="apellidos"><br>
             <label>Teléfono: </label><input type="text" value="" name="telefono"><br>
